# chatogpt3

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: cargo.yml
migrations/2024-12-14-040333_create_chats/: up.sql
migrations/2024-12-15-174500_create_messages/: down.sql  up.sql
src/: app.html
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-12-13-025222_create_posts/: down.sql
src-tauri/src/: cipher.rs  commands.rs  lib.rs  main.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/strings/: mod.rs  util.rs
src/lib/components/icons/: BotIcon.svelte  EditIcon.svelte  PlusIcon.svelte  SaveIcon.svelte  SendIcon.svelte  TrashIcon.svelte  UserIcon.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  types.ts
tauri-plugin-database/: Cargo.toml  build.rs  diesel.toml
tauri-plugin-database/permissions/: default.toml
tauri-plugin-database/permissions/autogenerated/: reference.md
tauri-plugin-database/permissions/autogenerated/commands/: add_chat.toml  add_message.toml  delete_chat.toml  get_messages.toml  list_chats.toml  update_chat.toml
tauri-plugin-database/permissions/schemas/: schema.json
tauri-plugin-database/src/: chats.rs  connection.rs  lib.rs  models.rs  schema.rs
tauri-plugin-database/src/commands/: chats.rs  messages.rs
tauri-plugin-database/src/db/: chats.rs  messages.rs
tauri-plugin-database/src/objects/: chats.rs
