[package]
name = "tauri-plugin-database"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-database"

[dependencies]
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2"
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
